# MSc-AI

./: .gitignore  README.md  claudes_alpha.py  claudes_god_alpha.py  pyproject.toml
Module 1 - Programming for AI/Week 1/: 1-1-expressions.ipynb  1-2-variables.ipynb  1-3-type.ipynb  1-4-strings.ipynb  1-5-inbuiltfunctions.ipynb  1-6-customfunctions.ipynb  1-7-selection.ipynb  1-8-iteration.ipynb  1-9-recursion.ipynb
Module 1 - Programming for AI/Week 2/: 2-1-programs.ipynb  2-2-inputandoutput.ipynb  2-3-basicstructure.ipynb  2-4-debugging.ipynb  exercise-sheet-1.ipynb
Module 1 - Programming for AI/Week 3/: 3-1-sequencesandlists.ipynb  3-2-tuples.ipynb  3-3-twoddata.ipynb  3-4-setsanddictionaries.ipynb  3-5-comprehensions.ipynb  exercise-sheet-2.ipynb
Module 1 - Programming for AI/Week 4/: 4-1-modules.ipynb  4-2-random.ipynb  4-3-files.ipynb  4-4-testing.ipynb  (+2 more)
Module 6 - Humans and Intelligent Machines/: Accountability and Responsibility essay.docx  Accountability and Responsibility in AI.docx  Accountability and Responsibility in developing intelligent technology.docx  HumansAndIntelligentMachines_Assignment2.docx  Testing for Intelligence .docx  Topic 1 - Accountability and Responsibility .docx
Module 7 - AI Org Systems Design /: AI System Arcitecture Assignment.docx  AI System Engineering Notes.docx  System Design for AI Master.docx  System Goals - Online film DB (1).docx  System Goals - Online film DB.docx  further notes .docx  ~$ System Arcitecture Assignment.docx  ~$rther notes .docx  ~$stem Design for AI Master.docx  ~$stem Goals - Online film DB.docx
(+353 files in other folders)
