[tool.poetry]
name = "msc-ai"
version = "0.1.0"
description = ""
authors = ["Leon Roe <leonjmroe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
jupyter = "^1.1.1"
plotly-express = "^0.4.1"
graphviz = "^0.20.3"
networkx = "^3.4.2"
matplotlib = "^3.9.2"
kagglehub = "^0.3.4"
kaggle = "^1.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
