[tool.poetry]
name = "msc-ai"
version = "0.1.0"
description = ""
authors = ["Leon Roe <leonjmroe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
plotly-express = "^0.4.1"
graphviz = "^0.20.3"
networkx = "^3.4.2"
matplotlib = "^3.9.2"
kagglehub = "^0.3.4"
kaggle = "^1.6.17"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
tensorflow = "^2.18.0"
keras-tuner = "^1.4.7"
imblearn = "^0.0"
shimmy = {extras = ["dm-control"], version = "^2.0.0"}
dm-control = "^1.0.28"
ale-py = "^0.10.2"
opencv-python = "^4.11.0.86"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
